blocks extension: fix the vertical alignment of images in text+images blocks in the edit view

--- a/woost/views/resources/styles/blocks-EditBlocksView.css
+++ b/woost/views/resources/styles/blocks-EditBlocksView.css
@@ -279,6 +279,7 @@
     vertical-align: top;
     display: table-cell;
     padding-left: 1em;
+    padding-top: 0.5em;
     min-width: 14em;
 }
 
